# unified-fintech-risk-gateway

./: .gitignore  Dockerfile  FIX_PLAN_H1_H5.md  FIX_PLAN_L1_L5.md  IMPLEMENTATION.md  MASTER_DOC.md  PROJECT_REQUIREMENT.md  README.md  dummy_test.py  graders.py  inference.py  inference_result.txt  openenv.yaml  openenv_bridge.py  pyproject.toml  requirements.txt  unified_gateway.py  validate-submission.sh  verify_foundation.py  verify_step.py
docs/: AUDIT_AND_FIXES.md  BEGINNER_GUIDE.md  COMPLIANCE_REPORT.md  EXPLORATION_VS_EXPLOITATION.md  FIX_PLAN_H1_H5.md  FIX_PLAN_L1_L5.md  FIX_PLAN_M1_M5.md  GAP_ANALYSIS.md  JUDGE_READY_MANUAL.md  MASTER_DOC.md
server/: app.py
spring/: pom.xml
spring/src/main/java/com/ufrg/: GatewayApplication.java
spring/src/main/java/com/ufrg/controller/: GatewayController.java
spring/src/main/java/com/ufrg/env/: GymEnvironment.java  UnifiedFintechEnv.java
spring/src/main/java/com/ufrg/grader/: EasyGrader.java  GraderFactory.java  HardGrader.java  MediumGrader.java  TaskGrader.java
spring/src/main/java/com/ufrg/inference/: InferenceRunner.java
spring/src/main/java/com/ufrg/model/: UFRGAction.java  UFRGObservation.java  UFRGReward.java
spring/src/main/resources/: application.properties
spring/src/test/java/com/ufrg/: GatewayApplicationTests.java
spring/src/test/java/com/ufrg/env/: UnifiedFintechEnvFoundationTest.java  UnifiedFintechEnvStepTest.java  UnifiedFintechEnvTest.java
spring/src/test/java/com/ufrg/grader/: TaskGraderTest.java
tests/: conftest.py  test_foundation.py  test_graders.py  test_step.py
