[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-fintech-risk-gateway"
version = "0.1.0"
description = "SRE/DevOps Gateway Orchestrator for UPI architectures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "gymnasium>=0.29.1",
    "numpy>=1.26.4",
    "pydantic>=2.0",
    "openai>=1.0.0"
]

[project.scripts]
server = "server.app:main"